--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,8 +8,7 @@
 
   "mounts": [
     "source=/home/ubuntu/alex1,target=/workspace,type=bind,consistency=cached",
-    "source=/home/ubuntu/.ssh,target=/root/.ssh,type=bind,consistency=cached,readonly",
-    "source=/home/ubuntu/.gitconfig,target=/root/.gitconfig,type=bind,consistency=cached"
+    "source=/home/ubuntu/.ssh,target=/root/.ssh,type=bind,consistency=cached,readonly"
   ],
 
   "workspaceFolder": "/workspace/SFT_GRPO",
@@ -28,9 +27,16 @@
         "eamodio.gitlens"
       ],
       "settings": {
-        "python.defaultInterpreterPath": "/opt/venv/bin/python",
+        "python.defaultInterpreterPath": "/workspace/env1/bin/python",
         "python.terminal.activateEnvironment": true,
-        "jupyter.jupyterServerType": "local"
+        "jupyter.jupyterServerType": "local",
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "terminal.integrated.profiles.linux": {
+          "bash": {
+            "path": "/bin/bash",
+            "args": ["-c", "source /workspace/env1/bin/activate && exec bash"]
+          }
+        }
       }
     }
   },
